--- a/gb/24/11/22/n14376173.md
+++ b/gb/24/11/22/n14376173.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>罗素克洛曾渴望“死而复生”演《神鬼战士2》</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/09/id14337185-20240924-mark-UIP09-600x400.jpg" />
-<h6>《神鬼战士2》（Gladiator II）电影剧照。（UIP提供）
-</h6>
+<h6>《神鬼战士2》（Gladiator II）电影剧照。（UIP提供）</h6>
 <hr>
 	<p>【大纪元2024年11月22日讯】（大纪元记者叶子杰编译报导）60岁的纽西兰男演员罗素?克洛在原版《神鬼战士》中饰演将军“麦希穆斯”，在片尾时去世了。当地21日，导演雷利?史考特证实罗素曾经很想“死而复生”出演续集，可是都没有好法子。</p>
 <p>尽管在《神鬼战士》（Gladiator，陆译：角斗士，2000年）故事最后，罗素?克洛（Russell Crowe）饰演的“麦希穆斯”将军去世了，但罗素还是对《神鬼战士2》很感兴趣，很想参与演出。当时该系列导演雷利?史考特（Ridley Scott）想出了让他的角色灵魂进入别的战士身体重生的办法，但是罗素拒绝了。</p>
@@ -14,45 +13,45 @@
 <p>不过，史考特表示，当提出这个概念时，罗素拒绝了，因为这需要找不同的演员来演这个转世的角色（而非罗素亲自演出）。雷利记得罗素回他说：“这样不太好吧，是吗？这真的行不通。”</p>
 <p>史考特最后让大卫?史卡帕（David Scarpa）和彼得?克莱格（Peter Craig）取代了凯夫编剧一职并改变了剧情内容，让麦希穆斯之子“卢赛斯”成为主角，由爱尔兰男演员保罗?麦斯卡（Paul Mescal）主演。</p>
 <p>据《CBR》报导，史考特和麦斯卡最近也证实，由于麦希穆斯死了，所以他们在制作《神鬼战士2》时从未咨询过罗素的意见。尽管史考特坚称他和罗素的关系仍然很好，但罗素在6月接受采访时表示，他自认对《神鬼战士》续集有点不悦，还有少许的忧郁和少许的嫉妒。</p>
-<figure id="attachment_13939019" aria-describedby="caption-attachment-13939019" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13939019-20230128001757454349-original.jpg"><img decoding="async" class=" wp-image-13939019" src="https://i.epochtimes.com/assets/uploads/2023/02/id13939019-20230128001757454349-original-450x300.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13939019" class="wp-caption-text">2023年1月28日，澳洲男星罗素?克洛（Russell Crowe）和他的女友布兰妮·特里奥（Britney Theriot）观看在墨尔本公园举行的 2023 年澳洲网球公开赛女子单打决赛。（AAP Image / Joel Carrett）</figcaption></figure>
-<figure id="attachment_14337178" aria-describedby="caption-attachment-14337178" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/09/id14337178-20240924-mark-UIP03.jpg"><img decoding="async" class=" wp-image-14337178" src="https://i.epochtimes.com/assets/uploads/2024/09/id14337178-20240924-mark-UIP03-450x253.jpg" alt="" width="600" b="337" /></a><figcaption id="caption-attachment-14337178" class="wp-caption-text">《神鬼战士2》剧照，保罗?麦斯卡饰演麦希穆斯之子“卢赛斯”。（UIP提供）</figcaption></figure>
-<figure id="attachment_14376197" aria-describedby="caption-attachment-14376197" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14376197-20241122-mark-UIP03.jpg"><img decoding="async" class=" wp-image-14376197" src="https://i.epochtimes.com/assets/uploads/2024/11/id14376197-20241122-mark-UIP03-450x267.jpg" alt="" width="600" b="356" /></a><figcaption id="caption-attachment-14376197" class="wp-caption-text">《神鬼战士2》片场照，保罗?麦斯卡（左）和雷利?史考特。（UIP提供）</figcaption></figure>
-<figure id="attachment_6600483" aria-describedby="caption-attachment-6600483" style="width: 401px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2012/06/1206130251132124.jpg"><img decoding="async" class="size-full wp-image-6600483" src="https://i.epochtimes.com/assets/uploads/2012/06/1206130251132124.jpg" alt="" width="401" b="599" /></a><figcaption id="caption-attachment-6600483" class="wp-caption-text">英国导演雷德利?史考特（Ridley Scott）资料照。( Stuart Wilson/Getty Images)</figcaption></figure>
-<p>责任编辑：苏漾</p>
-<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
-<ul class="related-posts" style="color: #0000ff; list-style: inside;">
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269333.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">罗素克洛自认对《神鬼战士》续集有少许嫉妒</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373297.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">《神鬼战士2》国际票房超越前作及《红色一号》</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287391.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">《神鬼战士2》首部预告3分钟 人物介绍抢先看</a></span></li>
+<figure id="attachment_13939019" aria-describedby="caption-attachment-13939019" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13939019-20230128001757454349-original.jpg" rel="nofollow"><img decoding="async" class=" wp-image-13939019" src="https://i.epochtimes.com/assets/uploads/2023/02/id13939019-20230128001757454349-original-450x300.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-13939019" class="wp-caption-text">2023年1月28日，澳洲男星罗素?克洛（Russell Crowe）和他的女友布兰妮·特里奥（Britney Theriot）观看在墨尔本公园举行的 2023 年澳洲网球公开赛女子单打决赛。（AAP Image / Joel Carrett）</figcaption></figure>
+<figure id="attachment_14337178" aria-describedby="caption-attachment-14337178" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/09/id14337178-20240924-mark-UIP03.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14337178" src="https://i.epochtimes.com/assets/uploads/2024/09/id14337178-20240924-mark-UIP03-450x253.jpg" alt="" width="600" b="337"></a><figcaption id="caption-attachment-14337178" class="wp-caption-text">《神鬼战士2》剧照，保罗?麦斯卡饰演麦希穆斯之子“卢赛斯”。（UIP提供）</figcaption></figure>
+<figure id="attachment_14376197" aria-describedby="caption-attachment-14376197" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14376197-20241122-mark-UIP03.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14376197" src="https://i.epochtimes.com/assets/uploads/2024/11/id14376197-20241122-mark-UIP03-450x267.jpg" alt="" width="600" b="356"></a><figcaption id="caption-attachment-14376197" class="wp-caption-text">《神鬼战士2》片场照，保罗?麦斯卡（左）和雷利?史考特。（UIP提供）</figcaption></figure>
+<figure id="attachment_6600483" aria-describedby="caption-attachment-6600483" style="width: 401px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2012/06/1206130251132124.jpg" rel="nofollow"><img decoding="async" class="size-full wp-image-6600483" src="https://i.epochtimes.com/assets/uploads/2012/06/1206130251132124.jpg" alt="" width="401" b="599"></a><figcaption id="caption-attachment-6600483" class="wp-caption-text">英国导演雷德利?史考特（Ridley Scott）资料照。( Stuart Wilson/Getty Images)</figcaption></figure>
+<p>责任编辑：苏漾
+</p>
+<div class="related-article"><span style="color: #000;font-weight: bold">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff">
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269333.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer nofollow">罗素克洛自认对《神鬼战士》续集有少许嫉妒</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373297.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer nofollow">《神鬼战士2》国际票房超越前作及《红色一号》</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287391.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer nofollow">《神鬼战士2》首部预告3分钟 人物介绍抢先看</a></span></li>
 </ul>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/23/n14377118.md#1">金马61典礼亮点 阿部宽、关继威颁奖 刘冠廷主持</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/23/n14376981.md#1">盼长辈延缓老化 团长黄江正分享创团缘由</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/23/n14376905.md#1">剧里救人却被婆婆误解 曾沛慈演出时感同身受</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/17/n10403852.md#1" target="_blank">老绥远韩氏：文革阅读经历</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/10/n11858311.md#1" target="_blank">王友群：习仲勋等支持气功研究的内幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/22/n11340432.md#1" target="_blank">美国务院年度报告 批中共严重打压宗教自由</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/19/n14373837.md#1">【未解之谜】雷达扫描惊现巨型地下城市 吴哥窟身世之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/9/n12607383.md#1">【元曲大家】什么样的杂剧堪称“千古绝品”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14372260.md#1">【未解之谜】“Trump”的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/8/n10769198.md#1">不辱使命、慷慨赴死的靖康第一忠臣李若水</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369253.md#1">三国英雄─周瑜 (2)：总角之交 生死与共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/22/n14375962.md#1">【新闻大家谈】战争升级 俄国发射最新型武器</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375809.md#1">【菁英论坛】《纽时》为何让川普如此愤怒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/22/n14376679.md#1">【马克时空】报复美英解禁 俄向乌发射新型导弹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/20/n14375042.md#1">Costco黑五有哪些优惠 其中一种很特别</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375622.md#1">珠海拱北一辆汽车加速撞击行人 伤亡不明</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375266.md#1">杭州一高校宿舍两人被砍 官方封锁消息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375506.md#1">《超人》12月中释预告片 演员抢先看后称很震撼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/20/n14375136.md#1">大陆主持人何炅聚会视频疯传 坐姿局促引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/19/n14374475.md#1">俄国芭蕾舞明星什克利亚罗夫坠亡 年仅39岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375173.md#1">杨紫琼罕见吐心声：无法生育一度感觉很失败</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/20/n14375088.md#1">一款蜡烛50美元 泰勒丝周边商品遭批卖太贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375307.md#1">居家除臭用小苏打 3方法除异味让空气变清新</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/22/n14376261.md#1">美国空服员的薪资知多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/20/n14374742.md#1">研究：吃蛋可保护大脑健康和降低胆固醇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375495.md#1">专家：4个旅游习惯透露你有“高功能焦虑症”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370557.md#1">根茎蔬菜的叶子能吃？这样做可以增添风味</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/22/n14376173.htm">罗素克洛曾渴望“死而复生”演《神鬼战士2》</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/22/n14376173.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
