--- a/gb/24/12/2/n14382806.md
+++ b/gb/24/12/2/n14382806.md
@@ -8,41 +8,40 @@
 	<p>【大纪元2024年12月02日讯】（大纪元记者叶子杰编译报导）《神鬼战士II》制作及行销成本高达3.5亿美元，截至周日（1日），全球票房收入目前为3.2亿美元，预计将达到4.5亿美元左右。不过，后续能依靠随选视讯和串流媒体达到盈利。</p>
 <p>87岁的英国导演雷利?史考特最近表示，他肯定要拍第三部续集。</p>
 <p>据《Variety》《Ｗorld Of Reel》报导，《神鬼战士II》（Gladiator II，陆译：角斗士II）制作成本高达2.5亿美元，行销成本超过1亿美元。一般电影需达制作成本的两倍以上才能获利。截至1日在北美上映两个周末、国际上映三个周末后，目前全球票房收入为3.20亿美元，离获利还有一段差距。但导演雷利?史考特（Ridley Scott）表示，他肯定会继续拍第三部电影。</p>
-<p>《神鬼战士II》北美总票房为1.11亿美元，其外的国际票房收入为2.08亿美元，国际票房表现亮眼。史考特在11月22日北美上映前的新闻发布会上<ahref="https://www.youtube.com/watch?v=OiCX5nSG6C8" target="_blank" rel="noopener">点这看影片</a>）说：“鉴于我们昨天看到的世界其他地方的（票房）表现，肯定会有《神鬼战士III》。因为它也变得有经济价值，如果不考虑第三部电影，那你就是疯了。”</p>
+<p>《神鬼战士II》北美总票房为1.11亿美元，其外的国际票房收入为2.08亿美元，国际票房表现亮眼。史考特在11月22日北美上映前的新闻发布会上<ahref="https://www.youtube.com/watch?v=OiCX5nSG6C8" target="_blank" rel="noopener nofollow noreferrer">点这看影片</a>）说：“鉴于我们昨天看到的世界其他地方的（票房）表现，肯定会有《神鬼战士III》。因为它也变得有经济价值，如果不考虑第三部电影，那你就是疯了。”</p>
 <p>史考特补充说，《神鬼战士II》的剧情细节也是“计划好了，为拍续集留出了很大的（故事）空间”。</p>
 <p>《Puck News》上周报导指出，《神鬼战士II》最终的全球票房预计将达到4.5亿美元左右，如果是这样的话，很难实现收支平衡。但后续该电影能依靠随选视讯和串流媒体达到盈利。据外媒报导，此前，史考特在采访中曾表示，他已经开始写第三部电影的剧本，已经写了十几页。</p>
 <p>在评分方面，美国网路电影资料库（IMDb）、影评网站“烂番茄”（Rotten Tomatoes）和“影院评分”（CinemaScore）是评估电影好与不好的参考依据之一。IMDb满分为十分，截至今日，原作《神鬼战士》（Gladiator，2000）和《神鬼战士II》分别获得观众8.5和6.9的评分。</p>
 <p>烂番茄影评员分别给予80%及71%的新鲜度，观众分别给予87%及83%的新鲜度；分别获得影院评分“A”和“B”的评价。</p>
-<figure id="attachment_14364690" aria-describedby="caption-attachment-14364690" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14364690-20241105-mark-UIP01.jpg"><img decoding="async" class=" wp-image-14364690" src="https://i.epochtimes.com/assets/uploads/2024/11/id14364690-20241105-mark-UIP01-450x253.jpg" alt="" width="600" b="337" /></a><figcaption id="caption-attachment-14364690" class="wp-caption-text">《神鬼战士2》片场照，导演雷利?史考特。（UIP提供）</figcaption></figure>
+<figure id="attachment_14364690" aria-describedby="caption-attachment-14364690" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14364690-20241105-mark-UIP01.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14364690" src="https://i.epochtimes.com/assets/uploads/2024/11/id14364690-20241105-mark-UIP01-450x253.jpg" alt="" width="600" b="337"></a><figcaption id="caption-attachment-14364690" class="wp-caption-text">《神鬼战士2》片场照，导演雷利?史考特。（UIP提供）</figcaption></figure>
 <p>责任编辑：苏漾</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/3/n14587214.md#1">银发乐活日登场 罗斯密社区共享健康资源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585212.md#1">柑县台美商会联谊 近百人参与交流</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585196.md#1">台美人历史协会9月邀民众抗老保健</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585123.md#1">彰女校友9/18南加餐叙 疫后重启 欢迎报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/22/n10162566.md#1" target="_blank">共产暴政录——杀父竟成学习榜样</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/6/n11368594.md#1" target="_blank">二度死里逃生 前大陆白领熬过酷刑迎来自由</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/6/n11704965.md#1" target="_blank">宁静：《花为媒》被中共禁播十五年只为淫乱华夏</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/6/n9230640.md#1" target="_blank">对中国法轮功学员被迫害的调查 (2)</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/31/n14564212.md#1">【古道人生】才女一首诗竟能改变贫穷丈夫的命运</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573085.md#1">【未解之谜】两千年无人敢挖？揭秘秦始皇的地下王国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/9/n14570620.md#1">【未解之谜】地球七大脉轮终极预言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569067.md#1">亚里斯多德的教育课：培养品格的四门学科</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/4/n4588708.md#1">秉笔直书 为后世法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/4/n13695331.md#1">【器乐独奏与协奏曲】莫扎特降E大调第三号圆号协奏曲，作品第447号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573708.md#1">【纪元焦点】商圈关闭 上海为何如此萧条？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14573945.md#1">【时事金扫描】美俄谈判 川普奇招拿捏普京</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572340.md#1">经济学家：史上最大金融泡沫将致市场大崩盘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572367.md#1">美国最具价值的10所私立和公立大学</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572804.md#1">【更新】台风杨柳袭台 14日停班停课一览</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572427.md#1">以赵露思解约风波为例 王晶曝大陆娱乐圈乱象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573139.md#1">《歌手2025》评分仅3.8 创史上最低分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573082.md#1">首度回应隐身两年原因 杨洋受访一度欲言又止</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572439.md#1">港星陈冠希遭Nike起诉 索赔逾12万美元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573446.md#1">传贝佐斯想让妻子桑切斯在《007》担任要角</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572017.md#1">电器在不使用时拔掉插头 既省电又降温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572631.md#1">园艺专家经验谈：别再种植这5种树</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572608.md#1">美移民新规收紧婚姻绿卡 华人律师析政策要点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573410.md#1">睡太多会增加死亡风险？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/11/n14571685.md#1">睡姿决定健康：睡得好又不酸痛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/2/n14382806.htm">《神鬼战士2》票房还在追成本 导演要拍第三部</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/2/n14382806.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
