--- a/gb/25/12/1/n14646672.md
+++ b/gb/25/12/1/n14646672.md
@@ -14,12 +14,12 @@
 <p>法轮功学员修“真、善、忍”心怀善心与善念。林进元有次开车上高速公路时，撞上前车掉下来饲料袋包，还好大家都没受伤，到警局做笔录时，肇事驾驶是自创业的年轻人觉得很懊恼，林进元心生不舍过去安慰他、鼓励他。而台南学员车金爱在工作的地方鼓励一家人拉近了感情，被老板称赞：家里来了一位非常正向的人，还介绍她前去协助亲戚的亲子关系。◇</p>
 <p>责任编辑：于曼</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/26/n10174332.md#1" target="_blank">周晓辉：叶利钦退出苏共引发退党潮</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/3/n9919603.md#1" target="_blank">王江火：“抗美援朝”不具备正义性</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
